--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
         "@radix-ui/react-icons": "^1.1.1",
         "@radix-ui/react-radio-group": "^0.1.5",
         "@stitches/react": "^1.2.8",
-        "mongodb": "^4.7.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-hot-loader": "^4.12.20",
         "reflect-metadata": "^0.1.13",
         "sqlite3": "5.0.0",
         "ts-node": "^10.8.2",
-        "typeorm": "^0.2.24"
+        "typeorm": "^0.3.7",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "@babel/core": "^7.9.0",
@@ -41,6 +41,7 @@
         "@types/node": "^13.13.52",
         "@types/react": "^16.9.31",
         "@types/react-dom": "^16.9.6",
+        "@types/uuid": "^8.3.4",
         "babel-loader": "^8.1.0",
         "concurrently": "^5.1.0",
         "css-loader": "^3.4.2",
