[feat] started on tasks

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
         "@radix-ui/react-icons": "^1.1.1",
         "@radix-ui/react-radio-group": "^0.1.5",
         "@stitches/react": "^1.2.8",
+        "@stitches/tailwind": "^9.0.0-alpha.8",
+        "@types/lodash": "^4.14.182",
+        "lodash": "^4.17.21",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-hot-loader": "^4.12.20",
