--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "reflect-metadata": "^0.1.13",
         "sqlite3": "5.0.0",
         "ts-node": "^10.8.2",
+        "tsyringe": "^4.7.0",
         "typeorm": "^0.3.7",
         "uuid": "^8.3.2"
     },
